# moos-ivp-msis

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  build-ivp-extend.sh  build.sh
3rdParties/moos-python/: MOOSCore.cpp  logutils.cpp  setup.py  std_item.hpp
3rdParties/moos-python/examples/: test.py
3rdParties/moos-python/examples/example1/: example.py  mission.moos
3rdParties/moos-python/examples/logutils/: example.py  test.alog
3rdParties/razor-9dof-ahrs/Arduino/Razor_AHRS/: Razor_AHRS.ino
data/: CMRE.info  CMRE.tif  CMRE_14.info  CMRE_14.tif
docs/: Cameras Issues  Compile iIMU_RazorAHRS  Needed libraries
missions/alder/: alder.bhv  alder.moos
missions/ciscrea/: integration_test.moos
missions/eurathlon/: eurathlon.moos  eurathlon_pipe.moos  eurathlon_wallfollowing.moos  eurathlon_waypoint.moos  waypoint.bhv
missions/ground/: monitor.moos  remote_PID.moos  remote_control.moos
missions/playback/: playback.moos  playback_marineviwer.moos
missions/sauce/: sauce.bhv  sauce.moos
missions/tests/: FINAL_FULL.moos  FINAL_FULL_small.moos  FINAL_PIPE.moos  FINAL_WALL.moos  PID.moos  PID_DepthNHeading.moos  PID_DepthNWall.moos  helm_qualification.moos  iCISCREA.moos  iControl.moos  iEchoSounder.moos  iSonar.moos  integration.moos  integration_iGPS.moos  joystick_PID.moos  joystick_control.moos  motors_calibration.moos  pBuoyDetection.moos  pCameraLogger.moos  pControl.moos  pLocalizationSonar.moos  pPositionTarget.moos  pSauceCSV.moos  pSimplePID.moos  pWallFollowing.moos  pipeInspection.bhv  pipeInspection.moos  qualification.bhv  qualification.moos  qualification_small.moos  rotation_speed_tests.moos  sea_test.moos  sonar.moos  structure.moos  uDeReCISCREA.moos  wallFollowing_echoSounder.bhv  wallFollowing_echoSounder.moos  wallFollowing_sonar.moos  wall_acquisition.moos  wall_joystick.moos  (+2 more)
scripts/: MyGenMOOSApp
scripts/etc/: rc.local
scripts/etc/default/: grub
src/: CMakeLists.txt  README
src/common/: Tests.h  constantes.h
src/iCISCREA/: CISCREA.cpp  CISCREA.h  CISCREA_Info.cpp  CISCREA_Info.h  CMakeLists.txt  M6dbus.cpp  M6dbus.h  iCISCREA.moos  main.cpp
src/iCamera/: CMakeLists.txt  Camera.cpp  Camera.h  Camera_Info.cpp  Camera_Info.h  Camera_Tests.cpp  Camera_Tests.h  main.cpp
src/iControl/: CMakeLists.txt  iControl.cpp  iControl.h  iControl.moos  iControl_Info.cpp  iControl_Info.h  iheadingcontroller.cpp  main.cpp
src/iEchoSounder/: CMakeLists.txt  EchoSounder.cpp  EchoSounder.h  EchoSounder_Info.cpp  EchoSounder_Info.h  EchoSounder_Tests.cpp  EchoSounder_Tests.h  iEchoSounder.moos  main.cpp
src/iGPS/: CMakeLists.txt  GPS.cpp  GPS.h  GPS_Info.cpp  GPS_Info.h  iGPS.moos  main.cpp
src/iIMU_RazorAHRS/: CMakeLists.txt  IMU_RazorAHRS.cpp  IMU_RazorAHRS.h  IMU_RazorAHRS_Info.cpp  IMU_RazorAHRS_Info.h  iIMU_RazorAHRS.moos  main.cpp
src/iSonar/: CMakeLists.txt  Sonar.cpp  Sonar_Tests.cpp  Sonar_Tests.h  main.cpp
src/libAOF_Gaussian2/: AOF_Gaussian2.cpp  AOF_Gaussian2.h  CMakeLists.txt
src/lib_behaviors/: CMakeLists.txt  Makefile  cmake_install.cmake
src/lib_behaviors-test/: BHV_SimpleWaypoint.cpp  BHV_SimpleWaypoint.h  CMakeLists.txt  README
src/lib_behaviors/PipeInspection/: CMakeLists.txt  PipeInspection.bhv  PipeInspection.cpp  PipeInspection.h
src/lib_behaviors/WallFollowing_EchoSounder/: CMakeLists.txt  WallFollowing_EchoSounder.bhv  WallFollowing_EchoSounder.cpp  WallFollowing_EchoSounder.h
src/lib_common/: CMakeLists.txt  Makefile  cmake_install.cmake
src/lib_common/Ciscrea_Images/: CMakeLists.txt  Ciscrea_Images.cpp  Ciscrea_Images.h  Makefile  cmake_install.cmake
src/pBuoyDetection/: CMakeLists.txt  main.cpp  pBuoeyDetection.moos  pBuoyDetection.cpp  pBuoyDetection.h  pBuoyDetection.moos  pBuoyDetection_Info.cpp  pBuoyDetection_Info.h
src/pCameraLogger/: CMakeLists.txt  main.cpp  pCameraLogger.cpp  pCameraLogger.h  pCameraLogger.moos  pCameraLogger_Info.cpp  pCameraLogger_Info.h
src/pControl/: CMakeLists.txt  controlparameters  iheadingcontroller.cpp  iheadingcontroller.h  main.cpp  pControl.cpp  pControl.h  pControl.moos  pControl_Info.cpp  pControl_Info.h
src/pDrawDetections/: CMakeLists.txt  DrawDetections.cpp  DrawDetections.h  DrawDetections_Info.cpp  DrawDetections_Info.h  main.cpp  pDrawDetections.moos
src/pLocalizationSonar/: CMakeLists.txt  LocalizationSonar.cpp  LocalizationSonar.h  LocalizationSonar_Info.cpp  LocalizationSonar_Info.h  main.cpp  pLocalizationSonar.moos
src/pPositionTarget/: CMakeLists.txt  main.cpp  pPositionTarget.cpp  pPositionTarget.h  pPositionTarget.moos  pPositionTarget_Info.cpp  pPositionTarget_Info.h
src/pSauceCSV/: CMakeLists.txt  SauceCSV.cpp  SauceCSV.h  SauceCSV_Info.cpp  SauceCSV_Info.h  main.cpp  pSauceCSV.moos
src/pSensorViewer/: CMakeLists.txt  SensorViewer.cpp  SensorViewer.h  SensorViewer_Info.cpp  SensorViewer_Info.h  main.cpp
src/pSimplePID/: CMakeLists.txt  SimplePID.cpp  SimplePID.h  SimplePID_Info.cpp  SimplePID_Info.h  main.cpp  pSimplePID.moos
src/pWallFollowing/: CMakeLists.txt  WallFollowing.cpp  WallFollowing.cpp~  WallFollowing.h  WallFollowing.h~  WallFollowing_Info.cpp  WallFollowing_Info.h  main.cpp  pWallFollowing.moos
src/pWallFollowing/regression_lineaire/: linreg.cpp  linreg.h
src/pXRelayTest/: CMakeLists.txt  Relayer.cpp  Relayer.h  main.cpp
src/uDeReCISCREA/: CMakeLists.txt  DeReCISCREA.cpp  DeReCISCREA.h  DeReCISCREA_Info.cpp  DeReCISCREA_Info.h  main.cpp  uDeReCISCREA.moos
src/uJoystick/: CMakeLists.txt  Joystick.cpp  Joystick.h  Joystick_Info.cpp  Joystick_Info.h  main.cpp  uJoystick.moos
