##############################################################################
# FILE:        moos-ivp-extend/src/lib_common/CMakeLists.txt
# DATE:        2010/09/07
# DESCRIPTION: CMakeLists.txt file
##############################################################################


#============================================================================
# Add the libraries in the current directory to the include path
#============================================================================
FILE(GLOB LOCAL_LIBRARY_DIRS ./lib_*)
INCLUDE_DIRECTORIES(${LOCAL_LIBRARY_DIRS})

#============================================================================
# List the subdirectories to build...
#============================================================================

# Common libs
ADD_SUBDIRECTORY(Ciscrea_Images)


##############################################################################
#                           END of CMakeLists.txt
##############################################################################
